--- a/tests/specsrunner.html
+++ b/tests/specsrunner.html
@@ -12,7 +12,7 @@
     <script src="../lib/api.config.js"></script>
     <script src="../lib/simple-storage.js"></script>
     <script src="../lib/service-helpers.js"></script>
-    <script src="../todo/tasks-api.service.js"></script>
+    <script src="../todo/api.service.js"></script>
     <script src="../todo/todo.service.js"></script>
     <script src="./todo.spec.js"></script>
   </head>
