--- a/public/About.html
+++ b/public/About.html
@@ -10,7 +10,7 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
-    />
+    /> 
     <title>About</title>
   </head>
   <body>
@@ -22,10 +22,10 @@
             <a class="nav-link" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./about.html">About</a>
+            <a class="nav-link" href="./About.html">About</a>
           </li>
         </ul>
-        <a id="login" href="/login.html">Sign In</a>
+        <a id="login" href="./Login.html">Sign In</a>
         <a id="logout" href="" onclick="doLogout(event)">Logout</a>
       </nav>
     </header>
