--- a/public/Home.html
+++ b/public/Home.html
@@ -22,7 +22,7 @@
             <a class="nav-link" href="./Home.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./about.html">About</a>
+            <a class="nav-link" href="./About.html">About</a>
           </li>
         </ul>
         <a id="logout" href="" onclick="doLogout(event)">Logout</a>
