--- a/public/Index.html
+++ b/public/Index.html
@@ -50,8 +50,8 @@
 <script src="../lib/auth.js"></script>
 <script src="../lib/auth.guard.js"></script>
 <script src="./api.services.js"></script>
-<script src="./todo.service.js"></script>
-<script src="./todo.js"></script>
+<script src="./todo/todo.service.js"></script>
+<script src="./todo/todo.js"></script>
 <script src="../app.js"></script>
 </body>
 </html>
