--- a/Week8/public/About.html
+++ b/Week8/public/About.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/Main.css" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-    <title>Welcome! | Morgan's ToDo App</title>
+    <title>About</title>
   </head>
   <body>
     <header>
@@ -22,40 +22,28 @@
             <a class="nav-link" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./about.html">About</a>
+            <a class="nav-link" href="/Week8/public/About.html">About</a>
           </li>
         </ul>
-        <a id="login" href="/login.html">Sign In</a>
+        <a id="login" href="/Week8/public/Login.html">Sign In</a>
+        <a id="logout" href="" onclick="doLogout(event)">Logout</a>
       </nav>
     </header>
 
-    <div class="container-fluid">
+    <div class="content">
       <div class="center">
-        <h2>Welcome to Morgan's ToDo app!</h2>
+        <h2>Some stuff about a site.</h2>
       </div>
     </div>
 
-<footer>
-    <div class="author">
+    <footer>
         <p>Author: <a href="https://github.com/MichaelNyadimo/MSSE661S8W2-class-app">MichaelNyadimo</p>
-    </div>
-  </footer>
-</body>
-</html>
-</footer>
-<script src="../lib/api.config.js"></script>
-<script src="../lib/simple-storage.js"></script>
-<script src="../lib/service-helpers.js"></script>
-<script src="../lib/auth.service.js"></script>
-<script src="../lib/auth.js"></script>
-<script src="../lib/auth.guard.js"></script>
-<script src="./api.services.js"></script>
-<script src="./todo/todo.service.js"></script>
-<script src="./todo/todo.js"></script>
-<script src="../app.js"></script>
-</body>
-</html>
-
-
-
-    
+    </footer>
+  </div>
+  <script src="./lib/api.config.js"></script>
+    <script src="./lib/simple-storage.js"></script>
+    <script src="./lib/service-helpers.js"></script>
+    <script src="./lib/auth.service.js"></script>
+    <script src="./lib/auth.js"></script>
+    </head>
+    </html>
