--- a/Week8/public/tests/specsrunner.html
+++ b/Week8/public/tests/specsrunner.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Testing</title>
+    <title>Testing with Jasmine</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/jasmine/2.8.0/jasmine.min.css"
