--- a/Week8/public/todo/todo.html
+++ b/Week8/public/todo/todo.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="../css/reset.css" />
+    <link rel="stylesheet" href="../css/main.css" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -19,10 +19,10 @@
         <a class="navbar-brand" href="#"></a>
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="./Home.html">Home</a>
+            <a class="nav-link" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./About.html">About</a>
+            <a class="nav-link" href="./about.html">About</a>
           </li>
         </ul>
         <a id="logout" href="" onclick="doLogout(event)">Logout</a>
@@ -67,15 +67,11 @@
         </form>
       </div>
 
-      <div id="tasks">
-        <div>Loading...</div>
-      </div>
+      <div id="tasks">Loading...</div>
     </div>
-
-
-                <p>Author: <a href="https://github.com/MichaelNyadimo/MSSE661S8W2-class-app">MichaelNyadimo</p>
+    <footer>
+        <p>Author: <a href="https://github.com/MichaelNyadimo/MSSE661S8W2-class-app">MichaelNyadimo</p>
             </footer>
-    </body>
     <script src="../lib/api.config.js"></script>
     <script src="../lib/simple-storage.js"></script>
     <script src="../lib/service-helpers.js"></script>
@@ -86,4 +82,5 @@
     <script src="./todo.service.js"></script>
     <script src="./todo.js"></script>
     <script src="../app.js"></script>
+  </body>
 </html>
